--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "solid-core-test",
-  "version": "0.1.3",
+  "name": "solid-core",
+  "version": "2.0.0",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
