--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solid-core",
-  "version": "2.0.0",
+  "version": "1.3.4",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -34,6 +34,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "@inrupt/solid-client": "^1.17.0",
+    "@inrupt/solid-client-authn-browser": "^1.11.2",
+    "@inrupt/vocab-common-rdf": "^1.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
