--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,8 @@ jobs:
       - run: git config user.email "wkgreen13@gmail.com"
       - run: git config user.name "CircleCI"
       - run: VERSION=$(npm version patch)
-      - run: git push -u origin $VERSION
+      - run: npm publish
+      - run: git push origin v$VERSION
 
 workflows:
   version: 2
