--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
       - run: npm run build
       - run: git config user.email "wkgreen13@gmail.com"
       - run: git config user.name "CircleCI"
+      - run: git status
       - run: VERSION=$(npm version patch)
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
       - run: npm publish
