tried to set env again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,12 @@ jobs:
       - run: git config user.email "wkgreen13@gmail.com"
       - run: git config user.name "CircleCI"
       - run: git stash
-      - run: echo $(npm version patch) >> $VERSION
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
-      - run: npm publish
+      - run: 
+            name: "NPM Increment and Publish"
+            command: |
+            VERSION=$(npm version patch)
+            npm publish
       - run: git push origin v$VERSION
 
 workflows:
