--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,5 @@ jobs:
         run: npm run build
       - name: Publish
         run: npm publish
+        env: 
+          NODE_AUTH_TOKEN: ${{NPM_TOKEN}}
