--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
 name: NPM Publish
 on: [pull_request]
+env:
+  NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 jobs:
   Publish:
     runs-on: macos-latest
@@ -15,5 +17,3 @@ jobs:
         run: npm run build
       - name: Publish
         run: npm publish
-        env: 
-          NODE_AUTH_TOKEN: ${{NPM_TOKEN}}
