--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-dist
+# dist -> including dist for package publish on gh
 
 # dependencies
 /node_modules
