--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "solid-core",
   "version": "1.8.8",
   "private": false,
-  "main": "index.js",
-  "module": "index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
     "README.md"
   ],
