--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "solid-core",
   "version": "1.8.8",
   "private": false,
-  "main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "files": [
-    "dist",
+    "src",
     "README.md"
   ],
   "scripts": {
     "start": "react-scripts start",
     "tag": "git tag v$npm_package_version && git push origin v$npm_package_version",
     "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files",
+    "prepare": "npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
